--- a/index.html
+++ b/index.html
@@ -1,7 +1,4 @@
-<!DOCTYPE html>
-<html>
-<body>
-	<pre style="word-wrap: break-word; white-space: pre-wrap;">.caption-overlay, .carousel .carousel-caption, .hero .hero-caption, #gridiconcontainer .gridicon_link .icon_content, #gridiconcontainer ul.gridicons > li > span:first-child .icon_content {
+.caption-overlay, .carousel .carousel-caption, .hero .hero-caption, #gridiconcontainer .gridicon_link .icon_content, #gridiconcontainer ul.gridicons > li > span:first-child .icon_content {
   rgba(205, 123, 35, 0.85);
 }
 #block-region-side-pre .block .header, #block-region-side-post .block .header {
@@ -12,6 +9,4 @@
 }
 #block-region-side-pre .block .content ul li a, #block-region-side-pre .block .content ul li p, #block-region-side-pre .block .content ul li span, #block-region-side-post .block .content ul li a, #block-region-side-post .block .content ul li p, #block-region-side-post .block .content ul li span {
   rgba(205, 123, 35, 1);	
-}</pre>
-</body>
-</html>
+}
