--- a/index.html
+++ b/index.html
@@ -1,12 +1,25 @@
-.caption-overlay, .carousel .carousel-caption, .hero .hero-caption, #gridiconcontainer .gridicon_link .icon_content, #gridiconcontainer ul.gridicons > li > span:first-child .icon_content {
-  rgba(205, 123, 35, 0.85);
+<!DOCTYPE html>
+<html>
+<body>
+	<pre style="word-wrap: break-word; white-space: pre-wrap;">.caption-overlay, .carousel .carousel-caption, 
+.hero .hero-caption, 
+#gridiconcontainer .gridicon_link .icon_content,
+#gridiconcontainer ul.gridicons > li > span:first-child .icon_content {
+  background-color: rgba(205, 123, 35, 0.85) !important;
 }
 #block-region-side-pre .block .header, #block-region-side-post .block .header {
-  rgba(205, 123, 35, 0.2);
+  background-color: rgba(205, 123, 35, 0.35) !important;
 }
 #block-region-side-pre .block .content, #block-region-side-post .block .content {
-  rgba(205, 123, 35, 0.1);
+  background-color: rgba(205, 123, 35, 0.15) !important;
 }
-#block-region-side-pre .block .content ul li a, #block-region-side-pre .block .content ul li p, #block-region-side-pre .block .content ul li span, #block-region-side-post .block .content ul li a, #block-region-side-post .block .content ul li p, #block-region-side-post .block .content ul li span {
-  rgba(205, 123, 35, 1);	
-}
+#block-region-side-pre .block .content ul li a,
+#block-region-side-pre .block .content ul li p,
+#block-region-side-pre .block .content ul li span,
+#block-region-side-post .block .content ul li a,
+#block-region-side-post .block .content ul li p,
+#block-region-side-post .block .content ul li span {
+  color: rgba(205, 123, 35, 1) !important;	
+}</pre>
+</body>
+</html>
