--- a/index.html
+++ b/index.html
@@ -1,7 +1,4 @@
-<!DOCTYPE html>
-<html>
-<body>
-	<pre style="word-wrap: break-word; white-space: pre-wrap;">.caption-overlay, .carousel .carousel-caption, 
+.caption-overlay, .carousel .carousel-caption, 
 .hero .hero-caption, 
 #gridiconcontainer .gridicon_link .icon_content,
 #gridiconcontainer ul.gridicons > li > span:first-child .icon_content {
@@ -20,6 +17,4 @@
 #block-region-side-post .block .content ul li p,
 #block-region-side-post .block .content ul li span {
   color: rgba(205, 123, 35, 1) !important;	
-}</pre>
-</body>
-</html>
+}
